--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,3 +4,7 @@
 @import '@fontsource/roboto/400.css';
 @import '@fontsource/roboto/500.css';
 @import '@fontsource/roboto/700.css';
+
+body {
+	background-color: #edeeee;
+}
